--- a/jcematcom.sty
+++ b/jcematcom.sty
@@ -19,7 +19,7 @@
 %                             REQUIRED PACKAGES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\RequirePackage[spanish,english]{babel}
+\RequirePackage[english]{babel}
 \RequirePackage{epsfig}
 \RequirePackage{amssymb}
 \RequirePackage{graphicx}
@@ -28,7 +28,6 @@
 %\RequirePackage[stable]{footmisc}
 
 \bibliographystyle{plain}
-\renewcommand\shorthandsspanish{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                             P A G E   S I Z E
